gitops/clusters/homelab/infra/jetkvm/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jetkvm-cloud
  namespace: jetkvm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jetkvm.local.nasbenito.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000

    - match: Host(`jetkvm.local.nasbenito.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: authentik-forwardauth
      services:
        - name: jetkvm-cloud
          port: 3000

  tls:
    secretName: wildcard-local-nasbenito-com-tls
