gitops/clusters/homelab/infra/jetkvm/jetkvm.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-jetkvm-svc
  namespace: authentik
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-jetkvm-svc
  namespace: authentik
subsets:
  - addresses:
      - ip: 192.168.111.10
    ports:
      - name: https
        port: 443
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: pve1-jetkvm-svc
  namespace: authentik
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve1-jetkvm-svc
  namespace: authentik
subsets:
  - addresses:
      - ip: 192.168.111.11
    ports:
      - name: https
        port: 443
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: pve2-jetkvm-svc
  namespace: authentik
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve2-jetkvm-svc
  namespace: authentik
subsets:
  - addresses:
      - ip: 192.168.111.12
    ports:
      - name: https
        port: 443
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: pve3-jetkvm-svc
  namespace: authentik
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve3-jetkvm-svc
  namespace: authentik
subsets:
  - addresses:
      - ip: 192.168.111.13
    ports:
      - name: https
        port: 443
        protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jetkvm-lan-route
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas-kvm.local.nasbenito.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-jetkvm-proxy-outpost
          namespace: authentik
      services:
        - kind: Service
          name: truenas-jetkvm-svc
          port: 443
          scheme: https
          passHostHeader: false
          serversTransport: jetkvm-transport

    - match: Host(`pve1-kvm.local.nasbenito.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-jetkvm-proxy-outpost
          namespace: authentik
      services:
        - kind: Service
          name: pve1-jetkvm-svc
          port: 443
          scheme: https
          passHostHeader: false
          serversTransport: jetkvm-transport

    - match: Host(`pve2-kvm.local.nasbenito.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-jetkvm-proxy-outpost
          namespace: authentik
      services:
        - kind: Service
          name: pve2-jetkvm-svc
          port: 443
          scheme: https
          passHostHeader: false
          serversTransport: jetkvm-transport

    - match: Host(`pve3-kvm.local.nasbenito.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-jetkvm-proxy-outpost
          namespace: authentik
      services:
        - kind: Service
          name: pve3-jetkvm-svc
          port: 443
          scheme: https
          passHostHeader: false
          serversTransport: jetkvm-transport

  tls:
    secretName: wildcard-local-nasbenito-com-tls
